tdf#144624 Prevent infinite recursion when loading SVG icon

When Generic/X11 VCL backend plugin loads SVG icon,
it creates virtual device for rasterizing an SVG icon,
which in turn tries to load an SVG icon,
and thus infinite recursion happens.

Change-Id: I7559b6255e6718e64ef4a6e7c79d597375e5823a